fix(card): checkcard add vertical-align
close https://github.com/ant-design/pro-components/issues/4404

--- a/packages/card/src/components/CheckCard/index.less
+++ b/packages/card/src/components/CheckCard/index.less
@@ -59,6 +59,7 @@
   color: @text-color;
   font-size: @font-size-base;
   line-height: @line-height-base;
+  vertical-align: top;
   background-color: @white;
   border-radius: @border-radius-base;
   cursor: pointer;
